# nord_img_closestpoint

./: CMakeLists.txt  package.xml
scripts/: average_closest_point.py  image_display.py
